--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongoose": "^8.14.3",
-    "notes_app_mern": "file:.."
+    "normalize-url": "^8.0.2",
+    "recipe-board": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
