--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
-    "notes_app_mern": "file:..",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "recipeboard": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
