--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "notes_app_mern",
+  "name": "recipeboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/judxyz/thinkboard.git"
+    "url": "git+https://github.com/judxyz/recipeboard.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/judxyz/thinkboard/issues"
+    "url": "https://github.com/judxyz/recipeboard/issues"
   },
-  "homepage": "https://github.com/judxyz/thinkboard#readme"
+  "homepage": "https://github.com/judxyz/recipeboard#readme"
+
+
 }
